--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>About Me</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Sofadi+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Sofadi+One&display=swap"
+        rel="stylesheet">
 
-<link rel=""stylesheet" href="css/Style.css"
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +31,7 @@
 
         <!-- The main contains important page content -->
 
-        <section>
+        <section id="hero">
             <img src="img/avataaars.png" alt="An avatar that kinda looks like me.">
 
             <div>
@@ -38,22 +40,33 @@
             </div>
         </section>
 
-        <section>
+        <section id="bio">
 
             <!-- Biographical Information-->
 
-            <p>I want to...</p>
-            <ul>
-                <li>Travel</li>
-                <li>Own more dogs</li>
-                <li>Play new games</li>
-            </ul>
+            <div>
+
+                <p>I want to...</p>
+
+                <p>Travel</p>
+                <p>Own more dogs</p>
+                <p>Play more games</p>
+                <p>Keep up with all the MCU movies and shows</p>
+                <p>Pass all my classes this semester</p>
+                <p>Earn my A.A.S degree in fall 2025</p>
+                <p>Learn the coding language Python</p>
+                <p><a href="https://www.instagram.com/alphadjm?igsh=MWhvbHhya3B1OGVobw%3D%3D&utm_source=qr">DJ's Instagram page</a></p>
+
+                        </div>
 
 
         </section>
 
     </main>
 
+    <footer>
+        &copy; 2024 DJ Maldonado
+    </footer>
 
 </body>
 
