Adding Some Style

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                 <p>Pass all my classes this semester</p>
                 <p>Earn my A.A.S degree in fall 2025</p>
                 <p>Learn the coding language Python</p>
-                <p><a href="https://www.instagram.com/alphadjm?igsh=MWhvbHhya3B1OGVobw%3D%3D&utm_source=qr">DJ's Instagram page</a></p>
+                <p><a href="https://www.instagram.com/alphadjm?igsh=MWhvbHhya3B1OGVobw%3D%3D&utm_source=qr">DJ's
+                        Instagram page</a></p>
 
-                        </div>
+            </div>
 
 
         </section>
